--- a/01_materials/slides/04_strings.ipynb
+++ b/01_materials/slides/04_strings.ipynb
@@ -806,7 +806,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "python-env",
       "language": "python",
       "name": "python3"
     },
@@ -820,7 +820,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.11.14"
     },
     "rise": {
       "scroll": true,
