--- a/01_materials/slides/06_inputs.ipynb
+++ b/01_materials/slides/06_inputs.ipynb
@@ -106,7 +106,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "python-env",
       "language": "python",
       "name": "python3"
     },
@@ -120,7 +120,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.11.14"
     },
     "rise": {
       "scroll": true,
